--- a/YGCGanpati/YGCGanpati.csproj
+++ b/YGCGanpati/YGCGanpati.csproj
@@ -52,11 +52,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -359,7 +359,7 @@
     <Content Include="Views\QuizQuestion\Details.cshtml" />
     <Content Include="Views\QuizQuestion\Edit.cshtml" />
     <Content Include="Views\QuizQuestion\Index.cshtml" />
-    <Content Include="Views\Quiz\Play.cshtml" />
+    <Content Include="Views\Quiz\Index.cshtml" />
     <Content Include="Views\Event\Create.cshtml" />
     <Content Include="Views\Event\Delete.cshtml" />
     <Content Include="Views\Event\Details.cshtml" />
@@ -374,10 +374,13 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Download\App.cshtml" />
+    <Content Include="Views\Quiz\Result.cshtml" />
+    <Content Include="Views\Quiz\Winner.cshtml" />
+    <Content Include="Views\Home\Balance.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Download\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Project_Readme.html" />
